// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<NuVsItem /> > should render when active 1`] = `
<Styled(Styled(Box))
  active={true}
  onClick={[Function]}
>
  <styled.div>
    <strong>
      Sequence 
      4
    </strong>
    <Badge>
      13
    </Badge>
  </styled.div>
  <NuVsValues
    e="0.0012"
    orfCount={2}
  />
</Styled(Styled(Box))>
`;

exports[`<NuVsItem /> > should render when not active 1`] = `
<Styled(Styled(Box))
  active={false}
  onClick={[Function]}
>
  <styled.div>
    <strong>
      Sequence 
      4
    </strong>
    <Badge>
      13
    </Badge>
  </styled.div>
  <NuVsValues
    e="0.0012"
    orfCount={2}
  />
</Styled(Styled(Box))>
`;

exports[`<NuVsItem /> > should render when not active 2`] = `
<Styled(Styled(Box))
  active={false}
  onClick={[Function]}
>
  <styled.div>
    <strong>
      Sequence 
      4
    </strong>
    <Badge>
      13
    </Badge>
  </styled.div>
  <NuVsValues
    e="0.0012"
    orfCount={2}
  />
</Styled(Styled(Box))>
`;
